web/app/themes/envisioningjustice/assets/styles/components/_forms.scss
// Forms

// General form styles
form {
  .actions {
    margin-top: 20px;
  }

  .input-wrap {
    display: flex;
    position: relative;
    margin-top: $padding;
    &::after {
      left: 0;
      right: 0;
      bottom: 0;
      height: 1px;
      content: '';
      position: absolute;
      background-color: $black;
      transition: height .1s ease-out, background-color .1s ease-out;
    }
    &.-focus {
      &::after {
        height: 5px;
      }
    }
    &:first-of-type {
      margin-top: 0;
    }
    label {
      max-width: 200px;
      flex-basis: 200px;
      align-self: center;
      padding: 14px 10px 14px 0;
    }
    input {
      text-align: right;
    }
    &.filled {
      label {
        // display: none;
      }
    }
    &.error {
      margin-bottom: 40px;
    }

    &.textarea-wrap {
      display: block;

      label {
        padding: 0;
        top: $padding;
        left: $padding;
        position: absolute;
      }
      input {
        text-align: left;
      }

      &.-focus,
      &.filled {
        label {
          display: none;
        }
      }
    }
  }

  input,
  textarea {
    width: 100%;
    color: inherit;
    display: block;
    appearance: none;
    background: none;
    &:focus {
      outline: none;
    }
  }

  label {
    @include type-h3;
    font-size: 10px;
  }

  input {
    border: none;
    padding: 14px 0;
    border-bottom: 1px solid;
  }

  textarea {
    padding: $padding;
    border: 1px solid;
  }

  // Error Labels
  label.error {
    width: 100%;
    display: block;
    padding: 7px 20px;
    background: rgba($gray-dark,.5);
  }

  // File input type
  .file-input-wrap {
    display: block;
    box-shadow: inset 0 0 0 1px $black;

    label {
      max-width: none;
      cursor: pointer;
      padding: $padding $padding 0;
    }

    input[type=file] {    
      border: none;
      cursor: pointer;
      padding: 0 $padding $padding;
      color: transparent;
      border-left: 1px solid $black;
      border-right: 1px solid $black;
    }

    input[type=file]::-webkit-file-upload-button {
      visibility: hidden;
    }
    input[type=file]::before,
    input[type=file]::after {
      outline: none;
      display: inline-block;
      -webkit-user-select: none;
    }
    input[type=file]::before {
      color: $black;
      font-size: 12px;
      white-space: nowrap;
      text-decoration: underline;
      content: attr(data-content);
    }
    .attach-files-label {
      padding: 20px;
      display: block;
    }
    .files-attached {
      p {
        margin: 0;
        font-size: 12px;
        padding: 0 $padding;
      }
    }
  }
}

// Custom select styles
.select-wrapper {
  margin: 0;
  padding: 0;
  position: relative;
  select {
    box-shadow: none;
    border-radius: 0;
    border: none;
    padding-right: 28px;
    background: none;
    -webkit-appearance: none;
    &:focus {
      outline: none;
    }
  }
  &::after {
    position: absolute;
    top: 0;
    right: 0;
    height: 30px;
    width: 30px;
    content: '';
    pointer-events: none;
    border-left: 1px solid $white;
    background: url("../images/icon-arrow-down.svg") no-repeat center center;
    background-size: 13px 8px;
  }
}

// Events/News filters have slightly different style
.filters {
  .program-topic,
  .focus-area-topic {
    white-space: nowrap;
    overflow: hidden;
  }
}
.filters .select-wrapper {
  display: inline-block;
  border-bottom: 1px solid $yellow;
  select {
    // @include type-h3;
    max-width: 200px;
    text-transform: uppercase;
  }
  &::after {
    height: 16px;
    width: 24px;
    border: none;
    background-color: $white;
  }
}
// go firefox!
@-moz-document url-prefix() {
  .filters .select-wrapper select {
    -moz-appearance: none;
  }
}

// Overrides for Blackbaud embedded forms
.BBFormFieldContainer {
  position: relative;
  &::after {
    left: 0;
    right: 0;
    bottom: 0;
    height: 1px;
    content: '';
    position: absolute;
    background-color: $white-dark;
    transition: height .1s ease-out, background-color .1s ease-out;
  }
  &.-focus {
    &::after {
      height: 5px;
    }
  }
}
.bb-form {
  form {
    padding: 0!important;
    border: none!important;
  }
}
#mongo-form,
#mongo-form-38ced2e2-cad0-4cec-baa5-4e97cce64789 {
  @include type-h3;

  .BBFormTextbox,
  .BBFormTextArea {
    opacity: 1;
    width: 100%;
    display: block;
    appearance: none;
    border-radius: 0;
    background: none;
    @include type-h3;
    font-size: 10px;
    color: $white-dark;
    &:focus {
      outline: none;
      box-shadow: none;
    }
    &::placeholder {
      color: $white-dark;
      text-transform: capitalize;
    }
  }

  .BBFormTextbox {
    border: none;
    padding: 14px 0;
    border-bottom: 1px solid;
  }

  .BBFormTextArea {
    padding: $padding;
    border: 1px solid;
  }

  .BBFormContainer {
    padding: 0;
    border: none;
    border-radius: 0;
    .BBFormFieldContainer {
      margin-left: 0;
      margin-right: 0;
      color: $white-dark;
    }
  }

  .BBFormSection {
    legend + .BBFormFieldContainer {
      &::after {
        display: none;
      }
    }
  }

  fieldset {
    padding: 0!important;
    border: none!important;
  }

  .BBFormSubSectionHeading {
    width: 100%;
    margin-bottom: 20px;
    @include type-h3;
    &:empty {
      display: none;
    }
  }

  .BBFormSection {
    margin: 0;
    padding-bottom: 60px;
    p {
      @include type-h3;
    }
  }

  .BBFormSubmitbutton,
  .BBFormRadioLabel {
    @extend .button;
    margin-top: 20px;
    border-radius: 0;
    box-shadow: none;
  }

  // Table style
  .BBFormTable {
    background: none;
    border-radius: 0;
  }

  // Email signup sepcific
  .BBFormSectionHeading {
    display: none;
  }
}
// Messaging/loading
#bbox-msg-wrapper {
  img {
    display: none;
  }
}

